--- a/src/scss/page/_ourBraud.scss
+++ b/src/scss/page/_ourBraud.scss
@@ -2,22 +2,17 @@
     margin-bottom: 0;
     .silck-item{
         position: relative;
-        height: 45.5rem;
-        @include media-max($lg) {
-        height: 36rem;
-        }
-        @include media-max($md) {
-        height: 28.5rem;
-        }
-        @include media-max($sm) {
-        height: 21.75rem;
-        }
-        @include media-max($xs) {
-        height: 15.5rem;
-        }
-        @include media-max($xxs) {
-        height: 13.8rem;
-        }
+        background-size: cover;
+        background-position: center;
+        height: 48rem;
+        @include media-max($xxl){height: 42rem;}
+        @include media-max($xl) {height: 36rem;}
+        @include media-max($lg) {height: 30rem;}
+        @include media-max($md) {height: 24rem;}
+        @include media-max($sm) {height: 20rem;}
+        @include media-max($xs) {height: 14rem;}
+        @include media-max($xxs){height: 12rem;}
+
         figure{
             img{
                 width: 100%;
@@ -31,7 +26,7 @@
                 left: 0;
                 right: 0;
                 bottom: -0.125rem;
-                background-color: rgba(0, 0, 0, 0.6);
+                background-color: rgba(0, 0, 0, 0.2);
             }
         }
         .silck-item-heading{
@@ -48,6 +43,8 @@
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
+                font-weight: bolder;
+                text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
                 @include display-2;
                 @include media-max($xl) {
                     @include px(3rem)
@@ -56,13 +53,13 @@
                     text-align: center;
                     @include px(1rem)
                 }
-                text-shadow: 0.0625rem 0.0625rem 0.25rem rgba(0,0,0,0.8);
+                
             }
             h3{
                 max-width: 1140px;
                 margin: 0 auto;
                 width: 100%;
-                @include display-5;
+                @include display-4;
                 @include media-max($xl) {
                     @include px(3rem)
                 }
@@ -77,24 +74,14 @@
                 margin-left: auto;
                 margin-right: auto;
             iframe{
-                height: 44rem;
-                @include media-max($lg) {
-                    height: 34rem;
-                }
-                @include media-max($md) {
-                    height: 27rem;
-                }
-                @include media-max($sm) {
-                    height: 20.25rem;
-                }
-                @include media-max($xs) {
-                    height: 14rem;
-                }
-                @include media-max($xxs) {
-                    height: 12.3rem;
-                }
-            }
-            #{-hover}{
+                height: 48rem;
+                @include media-max($xxl){height: 42rem;}
+                @include media-max($xl) {height: 36rem;}
+                @include media-max($lg) {height: 30rem;}
+                @include media-max($md) {height: 24rem;}
+                @include media-max($sm) {height: 20rem;}
+                @include media-max($xs) {height: 14rem;}
+                @include media-max($xxs){height: 12rem;}
             }
         }
     }
@@ -152,15 +139,16 @@
     }
 
     .slick-dots{
-        bottom: 0;
+        bottom: 1rem;;
         li{
-            width: 0.75rem;
-            height: 1.5rem;
+            width: 1rem;
+            height: 1rem;
             position: relative;
+            margin: 0;
 
             button{
-                width: 0.75rem;
-                height: 1.5rem;
+                width: 1rem;
+                height: 1rem;
             }
             
             >button:before{
@@ -169,8 +157,8 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%,-50%);
-                width: 0.25rem;
-                height: 0.25rem;
+                width: 0.5rem;
+                height: 0.5rem;
                 border-radius: 50%;
                 background-color: #fff;
                 opacity: 1;
@@ -188,5 +176,300 @@
     }
 }
 .ourbraud{
+    &#{-sec2}{
+        background-color: #e5e3ea;
+        @include py(5rem);
+        &#{-container}{
+            @include container;
+            text-align: center;
+            h2{
+                @include display-3;
+                font-weight: bolder;
+                margin-bottom: 1.5rem;
+                color: #000;
+            }
+            p{
+                font-size: 0.9325rem;
+                margin-bottom: 1.5rem;
+                color: #000;
+            }
+        }
+    }
+    &#{-sec3}{
+        background-size: cover;
+        background-position: center;
+        height: 30rem;
+    }
+    &#{-sec4}{
+        background-color: #e5e3ea;
+        @include py(5rem);
+            &#{-container}{
+            max-width: 100rem;
+            margin: auto;
+            width: 100%;
+            @include media-min($lg) {
+                @include px(4.5rem);
+            }
+            h2{
+                text-align: center;
+                color: #000;
+                font-weight: bolder;
+                @include display-3;
+                margin-bottom: 3rem;
+            }
+        }
+    }
+    
+    
+    &#{-sec5}{
+        @include py(5rem);
+        &#{-container}{
+            @include container;
+            @include media-min($xl) {
+                max-width: 1450px;
+            }
+            h2{
+                text-align: center;
+                color: #000;
+                font-weight: bolder;
+                @include display-3;
+                margin-bottom: 3rem;
+            }
+            &#{-row}{
+                @include row;
+                &#{-col}{
+                    &:nth-of-type(1){
+                        @include col(100%);
+                        @include media-max($xl) {
+                            height: 18rem;
+                            margin-bottom: 1.5rem;
+                        }
+                        @include media-max($sm) {
+                            height: 10rem;
+                        }
+                    }
+                    &:nth-of-type(2){
+                        @include col(70%);
+                        @include media-max($xl) {
+                            @include col(100%);
+                        }
+                    }
+                    &:nth-of-type(3){
+                        @include col(30%);
+                        @include media-max($xl) {
+                            display: none
+                        }
+                    }
+                    figure{
+                        background-size: cover;
+                        background-position: left center;
+                        height: 100%;
+                    }
+                }
+            }
+        }
+        &#{_table}{
+            &#{-header}{
+                @include media-max($sm) {
+                    display: none
+                }
+                &#{-row}{
+                    @include row;
+                    @include mx(0);
+                    &#{-col}{
+                        background-color: #7b8f97;
+                        color: #fbfcfc;
+                        font-size: 1.25rem;
+                        @include col(33.333%);
+                        padding: 0.75rem 1.5rem;
+                        &:nth-of-type(2){
+                            border-left: 0.125rem solid #fff;
+                            border-right: 0.125rem solid #fff;
+                        }
+                    }
+                }
+            }
+            &#{-body}{
+                &#{-row}{
+                    @include row;
+                    @include mx(0);
+                    border-style: solid;
+                    border-color: #ebeaef;
+                    border-width: 0 0.125rem 0.125rem 0.125rem;
+                    @include media-max($sm) {
+                        flex-direction: column;
+                        border-left: 0;
+                        border-right: 0;
+                        @include py(0.5rem);
+                        border-width: 0.125rem 0.125rem 0 0.125rem;
+                    }
+                    &#{-col}{
+                        @include stretched-link;
+                        font-size: 0.9325rem;
+                        @include col(33.333%);
+                        padding: 0.75rem 1.5rem;
+                        @include media-max($sm) {
+                            @include col(100%);
+                            padding: 0.25rem 1.5rem;
+                        }
+                        a{
+                            color: #000;
+                        }
+                        &:nth-of-type(1){order: 2;}
+                        &:nth-of-type(2){order: 3;}
+                        &:nth-of-type(3){order: 4;}
+                        &:nth-of-type(2){
+                            border-left: 0.125rem solid #fff;
+                            border-right: 0.125rem solid #fff;
+                            @include media-max($sm) {
+                                order: 1;
+                            }
+                            a{
+                                color: #6a8fc2;
+                            }
+                        }
+                    }
+                    &:hover{
+                        >div{
+                            background-color: #e5e3e9;
+                        }
+                    }
+                }
+            }
+            
+        }
+    }
+}
 
+#silck-awards{
+    
+    .silck-item{
+        @include px(1rem);
+        figure{
+            background-color: #fff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 15rem;
+            text-align: center;
+            img{
+                max-width: 100%;
+                max-height: 100%;
+            }
+        }
+        h3{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 8rem;
+            background-color: #dad9d9;
+            text-align: left;
+            span{
+                @include px(1rem);
+                color: #1b212d;
+                font-size: 1.5rem;
+                font-weight: bolder;
+                line-height: 2rem;
+                height: 6rem;
+                overflow: hidden;
+            }
+        }
+    }
+    
+    .slick-arrow{
+        @include media-max($md) {
+            display: none !important;
+        }
+        top: 50%;
+        background-color: #dad9d9;
+        width: 2.875rem;
+        height: 5rem;
+        z-index: 900;
+        border-radius: 0.25rem;
+        box-shadow: none;
+        &::after{
+            content: '';
+            position: absolute;
+            background-color: #fff;
+            top: 50%;
+            border-radius: 0.25rem;
+            width: 0.625rem;
+            height: 0.125rem;
+            opacity: 1;
+        }
+        &::before{
+            content: '';
+            position: absolute;
+            background-color: #fff;
+            bottom: 50%;
+            border-radius: 0.25rem;
+            width: 0.625rem;
+            height: 0.125rem;
+            opacity: 1;
+        }
+    }
+    
+    .slick-prev{
+        left: -3.5rem;
+        transform: translate(0,-50%);
+        &::after{
+            transform: translate(0.325rem,0.15rem) rotate(65deg);
+            right: 50%;
+        }
+        &::before{
+            transform: translate(0.3rem,-0.15rem) rotate(-65deg);
+            right: 50%;
+        }
+        
+    }
+    .slick-next{
+        right: -3.5rem;
+        transform: translate(0,-50%);
+        &::after{
+            transform: translate(-0.3rem,-0.35rem) rotate(65deg);
+            left: 50%;
+        }
+        &::before{
+            transform: translate(-0.3rem,0.35rem) rotate(-65deg);
+            left: 50%;
+        }
+    }
+
+    .slick-dots{
+        bottom: -2.5rem;;
+        li{
+            width: 1rem;
+            height: 1rem;
+            position: relative;
+            margin: 0;
+
+            button{
+                width: 1rem;
+                height: 1rem;
+            }
+            
+            >button:before{
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                width: 0.5rem;
+                height: 0.5rem;
+                border-radius: 50%;
+                background-color: #fff;
+                opacity: 1;
+            }
+            &:hover{
+                button::before{
+                    background-color: #5d5854;
+                }
+            }
+            &.slick-active>button::before{
+                background-color: #5d5854;
+            }
+    
+        }
+    }
 }
